1.0 29/12/06
- Initial release
SVN
- added ability to scroll through playlist and play selected songs with the
volume control/play button.
- best used with g15daemon wip